<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music Structure</string>
    <string name="title_home">Home</string>
    <string name="title_music_library">Music library</string>
    <string name="title_recents">Recents</string>
    <string name="title_new_releases">New releases</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="music_library">Music Library</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="music_name">Music Name</string>
    <string name="music_author">Music Author</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming Releases</string>
    <string name="official">By Official</string>
    <string name="by_someone">By SomeOne</string>
    <string name="official_release">Music Title (Official release)</string>
    <string name="some_description">Some Description</string>
</resources>
