<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <ImageView
        android:id="@+id/music_image"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/some_description"
        app:srcCompat="@drawable/ic_music_circle" />

    <TextView
        android:id="@+id/music_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/music_author_name"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/google_sans_bold"
        android:text="@string/official_release" />

    <TextView
        android:id="@+id/music_author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/music_image"
        android:layout_alignParentStart="true"
        android:layout_marginStart="78dp"
        android:fontFamily="@font/google_sans"
        android:text="@string/official"
        android:textSize="12sp" />

</RelativeLayout>